# beacon

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: docker-publish.yml
app/: config.py  main.py
app/routes/: __init__.py  homeassistant.py  slack.py
app/services/: __init__.py  homeassistant.py  monitoring.py  slack.py
docs/: setup.md
